# asm_userland

./: .gitignore  CMakeLists.txt
bench/: CMakeLists.txt  benchmark.sh
bench/malloc/: baseline.c  malloc_benchmark.asm
doc/: benchmark_results.txt
include/: CMakeLists.txt  file_descriptors.asm  syscalls.asm
scripts/: get_syscalls.sh
src/: CMakeLists.txt  config.cmake
src/common/: exit.asm  itoa.asm  main.asm  malloc.asm  malloc_chunk.asm  malloc_debug.asm  malloc_heap.asm  malloc_lifo.asm  print.asm
src/env/: config.cmake  env.asm
src/false/: CMakeLists.txt  false.asm
src/pwd/: config.cmake  pwd.asm
src/stdlib/main/: main.asm
src/stdlib/malloc/: malloc.asm  malloc_debug.asm  malloc_heap.asm  malloc_lifo.asm
src/stdlib/string/: itoa.asm  line_break.asm  print.asm  strlen.asm
src/tests/: config.cmake  malloc.asm
src/true/: CMakeLists.txt  true.asm
tests/: CMakeLists.txt
tests/malloc/: malloc_test.asm
